packetcrypt-sys/bindings.rs

#[test]
fn bindgen_test_layout_BlockMine_Res_s() {
    assert_eq!(
        ::std::mem::size_of::<BlockMine_Res_s>(),
        44usize,
        concat!("Size of: ", stringify!(BlockMine_Res_s))
    );
    assert_eq!(
        ::std::mem::align_of::<BlockMine_Res_s>(),
        4usize,
        concat!("Alignment of ", stringify!(BlockMine_Res_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Res_s>())).high_nonce as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Res_s),
            "::",
            stringify!(high_nonce)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Res_s>())).low_nonce as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Res_s),
            "::",
            stringify!(low_nonce)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Res_s>())).ann_mlocs as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Res_s),
            "::",
            stringify!(ann_mlocs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Res_s>())).ann_llocs as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Res_s),
            "::",
            stringify!(ann_llocs)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Res_s>())).job_num as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Res_s),
            "::",
            stringify!(job_num)
        )
    );
}
pub type BlockMine_Res_t = BlockMine_Res_s;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct BlockMine_s {
    pub maxAnns: u32,
}
#[test]
fn bindgen_test_layout_BlockMine_s() {
    assert_eq!(
        ::std::mem::size_of::<BlockMine_s>(),
        4usize,
        concat!("Size of: ", stringify!(BlockMine_s))
    );
    assert_eq!(
        ::std::mem::align_of::<BlockMine_s>(),
        4usize,
        concat!("Alignment of ", stringify!(BlockMine_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_s>())).maxAnns as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_s),
            "::",
            stringify!(maxAnns)
        )
    );
}
pub type BlockMine_t = BlockMine_s;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct BlockMine_Create_s {
    pub err: *const ::std::os::raw::c_char,
    pub stage: *const ::std::os::raw::c_char,
    pub miner: *mut BlockMine_t,
}
#[test]
fn bindgen_test_layout_BlockMine_Create_s() {
    assert_eq!(
        ::std::mem::size_of::<BlockMine_Create_s>(),
        24usize,
        concat!("Size of: ", stringify!(BlockMine_Create_s))
    );
    assert_eq!(
        ::std::mem::align_of::<BlockMine_Create_s>(),
        8usize,
        concat!("Alignment of ", stringify!(BlockMine_Create_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Create_s>())).err as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Create_s),
            "::",
            stringify!(err)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Create_s>())).stage as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Create_s),
            "::",
            stringify!(stage)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<BlockMine_Create_s>())).miner as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(BlockMine_Create_s),
            "::",
            stringify!(miner)
        )
    );
}
impl Default for BlockMine_Create_s {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
pub type BlockMine_Create_t = BlockMine_Create_s;
pub type BlockMine_Callback_t = ::std::option::Option<
    unsafe extern "C" fn(res: *mut BlockMine_Res_t, ctx: *mut ::std::os::raw::c_void),
>;
extern "C" {
    pub fn BlockMine_create(
        maxmem: u64,
        threads: ::std::os::raw::c_int,
        cb: BlockMine_Callback_t,
        cbc: *mut ::std::os::raw::c_void,
    ) -> BlockMine_Create_t;
}
extern "C" {
    pub fn BlockMine_destroy(bm: *mut BlockMine_t);
}
extern "C" {
    pub fn BlockMine_updateAnn(bm: *const BlockMine_t, mloc: u32, ann: *const u8);
}
extern "C" {
    pub fn BlockMine_getAnn(bm: *const BlockMine_t, mloc: u32, annOut: *mut u8);
}
extern "C" {
    pub fn BlockMine_getHashesPerSecond(bm: *const BlockMine_t) -> i64;
}
extern "C" {
    pub fn BlockMine_mine(
        bm: *mut BlockMine_t,
        header: *const u8,
        annCount: u32,
        annIndexes: *const u32,
        effectiveTarget: u32,
        jobNum: u32,
    );
}
extern "C" {
    pub fn BlockMine_requestStop(bm: *mut BlockMine_t);
}
extern "C" {
    pub fn BlockMine_awaitStop(bm: *mut BlockMine_t);
}
extern "C" {
    pub fn BlockMine_stop(bm: *mut BlockMine_t);
}
extern "C" {
    pub fn BlockMine_fakeMine(
        bm: *mut BlockMine_t,
        resOut: *mut BlockMine_Res_t,
        header: *const u8,
        annCount: u32,
        annIndexes: *const u32,
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct UdpGro_Sockaddr {
    pub isIpv6: u16,
    pub port: u16,
    pub addr: [u8; 16usize],
}
#[test]
fn bindgen_test_layout_UdpGro_Sockaddr() {
    assert_eq!(
        ::std::mem::size_of::<UdpGro_Sockaddr>(),
        20usize,
        concat!("Size of: ", stringify!(UdpGro_Sockaddr))
    );
    assert_eq!(
        ::std::mem::align_of::<UdpGro_Sockaddr>(),
        2usize,
        concat!("Alignment of ", stringify!(UdpGro_Sockaddr))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<UdpGro_Sockaddr>())).isIpv6 as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(UdpGro_Sockaddr),
            "::",
            stringify!(isIpv6)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<UdpGro_Sockaddr>())).port as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(UdpGro_Sockaddr),
            "::",
            stringify!(port)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<UdpGro_Sockaddr>())).addr as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(UdpGro_Sockaddr),
            "::",
            stringify!(addr)
        )
    );
}
extern "C" {
    pub fn UdpGso_supported() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn UdpGro_enable(
        fd: ::std::os::raw::c_int,
        pktSize: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn UdpGro_recvmsg(
        fd: ::std::os::raw::c_int,
        addrOut: *mut UdpGro_Sockaddr,
        buf: *mut u8,
        len: ::std::os::raw::c_int,
        pktSize: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn UdpGro_sendmsg(
        fd: ::std::os::raw::c_int,
        addr: *const UdpGro_Sockaddr,
        data: *const u8,
        length: ::std::os::raw::c_int,
        pktSize: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn UdpGro_setRecvBuf(
        fd: ::std::os::raw::c_int,
        bufSz: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ExportMe {
    pub a: Validate_checkBlock_Res,
}
#[test]
fn bindgen_test_layout_ExportMe() {
    assert_eq!(
        ::std::mem::size_of::<ExportMe>(),
        4usize,
        concat!("Size of: ", stringify!(ExportMe))
    );
    assert_eq!(
        ::std::mem::align_of::<ExportMe>(),
        4usize,
        concat!("Alignment of ", stringify!(ExportMe))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ExportMe>())).a as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ExportMe),
            "::",
            stringify!(a)
        )
    );
}
impl Default for ExportMe {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
